# ingeniebrios-bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
data/: server.properties
src/: main.py  requirements.txt  settings.py  utils.py
