[tool.poetry]
name = "ingeniebrios-bot"
version = "0.1.0"
description = ""
authors = ["Sebastian Marines <sebastian0marines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
