[tool.poetry]
name = "ingeniebrios-bot"
version = "0.1.0"
description = ""
authors = ["Sebastian Marines <sebastian0marines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
python-dotenv = "^0.19.2"
rcon = "^2.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = {version = "^22.1.0", allow-prereleases = true}
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
